--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^7.1.0",
     "@tailwindcss/vite": "^4.1.5",
     "axios": "^1.9.0",
+    "lightweight-charts": "^4.1.1",
     "lucide-react": "^0.509.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
